--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ section {
 
 /* Hero style start */
 .hero {
-    background-image: url('/Users/laceyg/Desktop/projects/run-buddy/assets/images/hero-bg.jpg');
+    background-image: url('https://static.fullstack-bootcamp.com/module-1/hero-bg.jpg');
     height: 600px;
     background-size: cover;
     background-position: center;
