--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ header h1 {
     font-weight: bold;
     font-size:36px;
     color:#fce138;
-    margin:0;
+    margin: 0;
     display: inline;
 }
 
@@ -29,7 +29,7 @@ header a {
 }
 
 header nav {
-    float:right;
+    float: right;
     margin: 7px 0;
 }
 
@@ -45,7 +45,7 @@ header nav ul li a{
 
 footer {
     background: #fce138;
-    width:100%;
+    width: 100%;
     padding: 40px 35px;
 }
 
@@ -67,7 +67,7 @@ footer a {
 }
 
 section {
-    padding:60px;
+    padding: 60px;
 }
 
 /* Hero style start */
@@ -82,8 +82,8 @@ section {
 .hero-form {
     color: #024e76;
     background-color:#fce138;
-    padding:20px;
-    width:500px;
+    padding: 20px;
+    width: 500px;
     border: solid 3px #024e76;
     position: absolute;
     bottom: 120px;
@@ -116,9 +116,9 @@ section {
 .hero-form button {
     color:#fce138;
     background-color:#024e76;
-    padding:10px 20px;
+    padding: 10px 20px;
     font-size: 15px;
-    border:none;
+    border: none;
 }
 /* hero styling end */
 
@@ -178,4 +178,51 @@ section {
 
 .steps span {
     font-size: 38px;
+}
+
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background-color: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
 }
