--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,10 @@
 }
 
 body {
-    /* comments */
     color:#39a6b2;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+/* header */
 header {
     padding: 20px 35px;
     background-color:#39a6b2;
@@ -48,6 +47,7 @@ header nav ul li a {
     font-size: 1.55vw;
 }
 
+/* footer */
 footer {
     background: #fce138;
     width: 100%;
@@ -76,7 +76,7 @@ section {
     padding: 60px;
 }
 
-/* Hero style start */
+/* Hero */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -140,15 +140,15 @@ section {
     font-size: 15px;
     border: none;
 }
-/* hero styling end */
 
 .section-title {
     font-size:55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -159,20 +159,16 @@ section {
     border-color: #39a6b2;
 }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -198,10 +194,6 @@ section {
 
 .steps span {
     font-size: 38px;
-}
-
-.trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -239,17 +231,8 @@ section {
     line-height: 1.3;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-/* half guess, half thinking I'm close */
+/* contact info */
 .contact {
-    text-align: center;
     background-color:#024e76;
  }
 
@@ -282,4 +265,17 @@ section {
     line-height: 1.5;
     font-size: 18px;
     font-style: normal;
+}
+
+/* general styling */
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
