--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,16 +263,10 @@ section {
  }
 
 .contact-info iframe {
-    width: 400px;
     height: 400px;
  }
 
  .contact-info div {
-    width: 420px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 20px 0 0 60px;
     color:white;
 }
 
@@ -289,8 +283,41 @@ section {
 .contact-info p, .contact-info address {
     margin: 25px;
     line-height: 1.5;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
+}
+
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
 }
 
 /* general styling */
