--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -84,6 +84,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-form {
@@ -110,7 +111,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height:1.3;
+    line-height:1.2;
 }
 
 .hero-cta h2 {
@@ -142,7 +143,7 @@ section {
 }
 
 .section-title {
-    font-size:55px;
+    font-size:48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -331,4 +332,19 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+/* MEDIA QUERY smaller desktop screens and smaller*/
+@media screen and (max-width: 980px) {
+    
+}
+
+/* MEDIA QUERY tablets and smaller */
+@media screen and (max-width: 768px) {
+  
+}
+
+/* MEDIA QUERY mobile phones and smaller */
+@media screen and (max-width: 575px) {
+  
 }
