--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 
 header h1 { 
@@ -22,6 +29,7 @@ header h1 {
     font-size:36px;
     color:#fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header a {
@@ -45,6 +53,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 /* footer */
@@ -80,20 +95,23 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
 }
 
 .hero-form {
     color: #024e76;
-    background-color:#fce138;
+    background-color:rgba(252, 225, 56, .8);
     padding: 20px;
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -118,6 +136,7 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .form-input {
@@ -128,6 +147,12 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.75);
+}
+.form-input:focus {
+    background-color: rgba(255,255,255,1);
+    outline: none;
 }
 
 .hero-form label {
@@ -140,6 +165,10 @@ section {
     padding: 10px 20px;
     font-size: 15px;
     border: none;
+    border-radius: 10px;
+}
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 
 .section-title {
@@ -212,12 +241,15 @@ section {
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
-    width: 80%;
     border-bottom: 1px solid #39a6b2;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.step:last-child {
+    border-bottom: none;
 }
 
 /* trainer info */
@@ -309,6 +341,12 @@ section {
     margin-bottom: 15px;
     margin-top: 5px;
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.75);
+}
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color:rgba(255,255,255,1);
+    outline: none;
 }
 
 .contact-form button {
@@ -319,6 +357,11 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 /* general styling */
@@ -339,6 +382,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
 }
     header h1 {
         width: 100%;
