--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,13 @@
 }
 
 body {
-    color:#39a6b2;
+    color: var(--tertiary-color);
     font-family: Arial, Helvetica, sans-serif;
 }
 /* header */
 header {
     padding: 20px 35px;
-    background-color:#39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -28,14 +28,14 @@ header {
 header h1 { 
     font-weight: bold;
     font-size:36px;
-    color:#fce138;
+    color:var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 header nav {
@@ -57,15 +57,15 @@ header nav ul li a {
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background:var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
 
 /* footer */
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -74,7 +74,7 @@ footer {
 }
 
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin:0;
 }
@@ -85,7 +85,7 @@ footer div {
 }
 
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 section {
@@ -108,7 +108,7 @@ section {
     color: #024e76;
     background-color:rgba(252, 225, 56, .8);
     padding: 20px;
-    border: solid 3px #024e76;
+    border: solid 3px var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -136,16 +136,16 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -161,15 +161,15 @@ section {
 }
 
 .hero-form button {
-    color:#fce138;
-    background-color:#024e76;
+    color:var(--primary-color);
+    background-color:var(--secondary-color);
     padding: 10px 20px;
     font-size: 15px;
     border: none;
     border-radius: 10px;
 }
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 .checkbox-wrapper input, .radio-wrapper input {
     opacity: 0;
@@ -185,7 +185,7 @@ section {
     height: 20px;
     width: 20px;
     background: rgba(255,255,255,0.75);
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     position: absolute;
     top: -4px;
     left: -30px;
@@ -198,7 +198,7 @@ section {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
@@ -208,8 +208,8 @@ section {
     content:"";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -227,7 +227,7 @@ section {
 
 .section-title {
     font-size:48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -236,16 +236,16 @@ section {
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -253,11 +253,11 @@ section {
 }
 /* what you do steps section */
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .step h3 {
-    color:#024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -272,14 +272,14 @@ section {
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-text {
     flex: 12;
 }
 .step-text p {
-    color:#39a6b2;
+    color:var(--tertiary-color);
     font-size: 18px;
 }
 
@@ -295,7 +295,7 @@ section {
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
     width: 80%;
     display: flex;
     flex-wrap: wrap;
@@ -309,8 +309,8 @@ section {
 /* trainer info */
 .trainer {
     margin: 20px;
-    background-color: #024e76;
-    color: #fce138;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -346,7 +346,7 @@ section {
 
 /* contact info */
 .contact {
-    background-color:#024e76;
+    background-color:var(--secondary-color);
  }
 
 .contact-info iframe {
@@ -358,13 +358,13 @@ section {
 }
 
  .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 30px;
     margin: 0 0 0 20px;
 }
 
 .contact h2, .contact-info a {
-    color:#fce138;
+    color:var(--primary-color);
 }
 
 .contact-info p, .contact-info address {
@@ -386,11 +386,11 @@ section {
 }
 
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -406,16 +406,16 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
     border-radius: 10px;
 }
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 /* general styling */
@@ -429,6 +429,12 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
 }
 
 /* MEDIA QUERY smaller desktop screens and smaller*/
